tests/int/list_command/snapshots/integration__int__list_command__multi_target__should_list_all_targets_for_own_crate.snap
---
source: tests/int/list_command/multi_target.rs
info:
  program: crawk
  args:
    - list
---
success: true
exit_code: 0
----- stdout -----
[lib]       analyzer
[lib]       cache
[lib]       constants
[lib]       discover
[lib]       discover::module_tree
[lib]       error
[lib]       graph
[lib]       graph::cycles
[lib]       graph::edges
[lib]       graph::orphans
[lib]       graph::paths
[lib]       lib
[lib]       model
[lib]       module_path
[lib]       parser
[lib]       parser::visitor
[lib]       reference
[lib]       resolve
[lib]       rules
[lib]       rules::eval
[lib]       rules::load
[lib]       utils
[lib]       version
[bin:crawk] cli
[bin:crawk] cli::overview
[bin:crawk] cli::validation
[bin:crawk] format
[bin:crawk] format::check_cmd
[bin:crawk] format::cycles
[bin:crawk] format::deps_cmd
[bin:crawk] format::list_cmd
[bin:crawk] format::orphans
[bin:crawk] format::paths
[bin:crawk] format::use_cmd
[bin:crawk] format::why_cmd
[bin:crawk] logger
[bin:crawk] main

----- stderr -----
