tests/int/list_command/snapshots/integration__int__list_command__multi_target__should_list_multi_target_with_depth.snap
---
source: tests/int/list_command/multi_target.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - list
    - "-t"
    - "-d"
    - "1"
---
success: true
exit_code: 0
----- stdout -----
[lib]              advanced_globs
[lib]              baz
[lib]              custom_path
[lib]              dir_module
[lib]              empty_module
[lib]              file_module
[lib]              foo
[lib]              glob_patterns
[lib]              glob_showcase
[lib]              group_patterns
[lib]              inline_modules
[lib]              item_visibility
[lib]              lib
[lib]              mixed
[lib]              nesting
[lib]              no_pub_items
[lib]              reexports
[lib]              tests
[lib]              uses_empty_glob
[lib]              visibility
[bin:modules]      main
[bin:modules-cli]  app
[bin:modules-cli]  app_only
[test:helpers]     helpers
[test:integration] helpers
[test:integration] integration

----- stderr -----
