tests/int/list_command/snapshots/integration__int__list_command__multi_target__should_list_multi_target_with_filter.snap
---
source: tests/int/list_command/multi_target.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - list
    - "-t"
    - "-F"
    - helper
---
success: true
exit_code: 0
----- stdout -----
[test:helpers]     helpers
[test:integration] helpers

----- stderr -----
