tests/int/list_command/snapshots/integration__int__list_command__multi_target__should_list_single_target_no_prefix.snap
---
source: tests/int/list_command/multi_target.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - list
    - nesting
---
success: true
exit_code: 0
----- stdout -----
nesting
nesting::level1
nesting::level1::level2
nesting::level1::level2::level3

----- stderr -----
